# Music_Recognition_and_Cataloging

./: .gitignore  README.md  app.py  helper.py  main.py  pyproject.toml  sampleData.py  songMetadata.py
