[tool.poetry]
name = "Music-Recogniser"
version = "0.1.0"
description = "This Python script utilizes the Shazam API for music recognition and cataloging metadata of songs."
authors = ["Kevin Isom <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
requests = "^2.31.0"
shazamio = "0.4.0.1"
asyncio = "3.4.3"
eyed3 = "0.9.7"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"